Meta 2/jucompiler.output
Terminals unused in grammar

    ARROW
    RESERVED


Grammar

    0 $accept: Program $end

    1 Program: CLASS IDENTIFIER LBRACE ProgramElements RBRACE

    2 ProgramElements: ε
    3                | ProgramElements MethodDecl
    4                | ProgramElements FieldDecl
    5                | ProgramElements SEMICOLON

    6 MethodDecl: PUBLIC STATIC MethodHeader MethodBody

    7 FieldDecl: PUBLIC STATIC Type IDENTIFIER IdList SEMICOLON
    8          | error SEMICOLON

    9 VarDecl: Type IDENTIFIER IdList SEMICOLON

   10 IdList: ε
   11       | IdList COMMA IDENTIFIER

   12 Type: BOOL
   13     | INT
   14     | DOUBLE

   15 MethodHeader: Type IDENTIFIER LPAR OptFormalParams RPAR
   16             | VOID IDENTIFIER LPAR OptFormalParams RPAR

   17 OptFormalParams: ε
   18                | FormalParams

   19 FormalParams: Type IDENTIFIER FormalParamsRest
   20             | STRING LSQ RSQ IDENTIFIER

   21 FormalParamsRest: ε
   22                 | FormalParamsRest COMMA Type IDENTIFIER

   23 MethodBody: LBRACE StatementAndVarDeclList RBRACE

   24 StatementAndVarDeclList: ε
   25                        | StatementAndVarDeclList Statement
   26                        | StatementAndVarDeclList VarDecl

   27 StatementList: ε
   28              | StatementList Statement

   29 Statement: LBRACE StatementList RBRACE
   30          | IF LPAR Expr RPAR Statement
   31          | IF LPAR Expr RPAR Statement ELSE Statement
   32          | WHILE LPAR Expr RPAR Statement
   33          | RETURN OptExpr SEMICOLON
   34          | MethodInvocation SEMICOLON
   35          | Assignment SEMICOLON
   36          | ParseArgs SEMICOLON
   37          | PRINT LPAR ExprOrStrlit RPAR SEMICOLON
   38          | error SEMICOLON
   39          | SEMICOLON

   40 OptExpr: ε
   41        | Expr

   42 ExprOrStrlit: Expr
   43             | STRLIT

   44 MethodInvocation: IDENTIFIER LPAR OptExprList RPAR
   45                 | IDENTIFIER LPAR error RPAR

   46 OptExprList: ε
   47            | ExprList

   48 ExprList: AExpr
   49         | ExprList COMMA AExpr

   50 Assignment: IDENTIFIER ASSIGN AExpr

   51 AExpr: IDENTIFIER ASSIGN AExpr
   52      | Expr

   53 ParseArgs: PARSEINT LPAR IDENTIFIER LSQ Expr RSQ RPAR
   54          | PARSEINT LPAR error RPAR

   55 Expr: Expr PLUS Expr
   56     | Expr MINUS Expr
   57     | Expr STAR Expr
   58     | Expr DIV Expr
   59     | Expr MOD Expr
   60     | Expr AND Expr
   61     | Expr OR Expr
   62     | Expr XOR Expr
   63     | Expr LSHIFT Expr
   64     | Expr RSHIFT Expr
   65     | Expr EQ Expr
   66     | Expr GE Expr
   67     | Expr GT Expr
   68     | Expr LE Expr
   69     | Expr LT Expr
   70     | Expr NE Expr
   71     | MINUS Expr
   72     | PLUS Expr
   73     | NOT Expr
   74     | LPAR AExpr RPAR
   75     | LPAR error RPAR
   76     | MethodInvocation
   77     | ParseArgs
   78     | IDENTIFIER OptDotLength
   79     | NATURAL
   80     | DECIMAL
   81     | BOOLLIT

   82 OptDotLength: ε
   83             | DOTLENGTH


Terminals, with rules where they appear

    $end (0) 0
    error (256) 8 38 45 54 75
    BOOL (258) 12
    CLASS (259) 1
    DOTLENGTH (260) 83
    DOUBLE (261) 14
    ELSE (262) 31
    IF (263) 30 31
    INT (264) 13
    PRINT (265) 37
    PARSEINT (266) 53 54
    PUBLIC (267) 6 7
    RETURN (268) 33
    STATIC (269) 6 7
    STRING (270) 20
    VOID (271) 16
    WHILE (272) 32
    AND (273) 60
    ASSIGN (274) 50 51
    STAR (275) 57
    COMMA (276) 11 22 49
    DIV (277) 58
    EQ (278) 65
    GE (279) 66
    GT (280) 67
    LBRACE (281) 1 23 29
    LE (282) 68
    LPAR (283) 15 16 30 31 32 37 44 45 53 54 74 75
    LSQ (284) 20 53
    LT (285) 69
    MINUS (286) 56 71
    MOD (287) 59
    NE (288) 70
    NOT (289) 73
    OR (290) 61
    PLUS (291) 55 72
    RBRACE (292) 1 23 29
    RPAR (293) 15 16 30 31 32 37 44 45 53 54 74 75
    RSQ (294) 20 53
    SEMICOLON (295) 5 7 8 9 33 34 35 36 37 38 39
    ARROW (296)
    LSHIFT (297) 63
    RSHIFT (298) 64
    XOR (299) 62
    IDENTIFIER <str> (300) 1 7 9 11 15 16 19 20 22 44 45 50 51 53 78
    NATURAL <str> (301) 79
    DECIMAL <str> (302) 80
    STRLIT <str> (303) 43
    BOOLLIT <str> (304) 81
    RESERVED <str> (305)
    IF_WITHOUT_ELSE (306)
    UNARY_PLUS (307)
    UNARY_MINUS (308)


Nonterminals, with rules where they appear

    $accept (54)
        on left: 0
    Program <node> (55)
        on left: 1
        on right: 0
    ProgramElements <node> (56)
        on left: 2 3 4 5
        on right: 1 3 4 5
    MethodDecl <node> (57)
        on left: 6
        on right: 3
    FieldDecl <node> (58)
        on left: 7 8
        on right: 4
    VarDecl <node> (59)
        on left: 9
        on right: 26
    IdList <node> (60)
        on left: 10 11
        on right: 7 9 11
    Type <node> (61)
        on left: 12 13 14
        on right: 7 9 15 19 22
    MethodHeader <node> (62)
        on left: 15 16
        on right: 6
    OptFormalParams <node> (63)
        on left: 17 18
        on right: 15 16
    FormalParams <node> (64)
        on left: 19 20
        on right: 18
    FormalParamsRest <node> (65)
        on left: 21 22
        on right: 19 22
    MethodBody <node> (66)
        on left: 23
        on right: 6
    StatementAndVarDeclList <node> (67)
        on left: 24 25 26
        on right: 23 25 26
    StatementList <node> (68)
        on left: 27 28
        on right: 28 29
    Statement <node> (69)
        on left: 29 30 31 32 33 34 35 36 37 38 39
        on right: 25 28 30 31 32
    OptExpr <node> (70)
        on left: 40 41
        on right: 33
    ExprOrStrlit <node> (71)
        on left: 42 43
        on right: 37
    MethodInvocation <node> (72)
        on left: 44 45
        on right: 34 76
    OptExprList <node> (73)
        on left: 46 47
        on right: 44
    ExprList <node> (74)
        on left: 48 49
        on right: 47 49
    Assignment <node> (75)
        on left: 50
        on right: 35
    AExpr <node> (76)
        on left: 51 52
        on right: 48 49 50 51 74
    ParseArgs <node> (77)
        on left: 53 54
        on right: 36 77
    Expr <node> (78)
        on left: 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81
        on right: 30 31 32 41 42 52 53 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73
    OptDotLength <node> (79)
        on left: 82 83
        on right: 78


State 0

    0 $accept: • Program $end

    CLASS  shift, and go to state 1

    Program  go to state 2


State 1

    1 Program: CLASS • IDENTIFIER LBRACE ProgramElements RBRACE

    IDENTIFIER  shift, and go to state 3


State 2

    0 $accept: Program • $end

    $end  shift, and go to state 4


State 3

    1 Program: CLASS IDENTIFIER • LBRACE ProgramElements RBRACE

    LBRACE  shift, and go to state 5


State 4

    0 $accept: Program $end •

    $default  accept


State 5

    1 Program: CLASS IDENTIFIER LBRACE • ProgramElements RBRACE

    $default  reduce using rule 2 (ProgramElements)

    ProgramElements  go to state 6


State 6

    1 Program: CLASS IDENTIFIER LBRACE ProgramElements • RBRACE
    3 ProgramElements: ProgramElements • MethodDecl
    4                | ProgramElements • FieldDecl
    5                | ProgramElements • SEMICOLON

    error      shift, and go to state 7
    PUBLIC     shift, and go to state 8
    RBRACE     shift, and go to state 9
    SEMICOLON  shift, and go to state 10

    MethodDecl  go to state 11
    FieldDecl   go to state 12


State 7

    8 FieldDecl: error • SEMICOLON

    SEMICOLON  shift, and go to state 13


State 8

    6 MethodDecl: PUBLIC • STATIC MethodHeader MethodBody
    7 FieldDecl: PUBLIC • STATIC Type IDENTIFIER IdList SEMICOLON

    STATIC  shift, and go to state 14


State 9

    1 Program: CLASS IDENTIFIER LBRACE ProgramElements RBRACE •

    $default  reduce using rule 1 (Program)


State 10

    5 ProgramElements: ProgramElements SEMICOLON •

    $default  reduce using rule 5 (ProgramElements)


State 11

    3 ProgramElements: ProgramElements MethodDecl •

    $default  reduce using rule 3 (ProgramElements)


State 12

    4 ProgramElements: ProgramElements FieldDecl •

    $default  reduce using rule 4 (ProgramElements)


State 13

    8 FieldDecl: error SEMICOLON •

    $default  reduce using rule 8 (FieldDecl)


State 14

    6 MethodDecl: PUBLIC STATIC • MethodHeader MethodBody
    7 FieldDecl: PUBLIC STATIC • Type IDENTIFIER IdList SEMICOLON

    BOOL    shift, and go to state 15
    DOUBLE  shift, and go to state 16
    INT     shift, and go to state 17
    VOID    shift, and go to state 18

    Type          go to state 19
    MethodHeader  go to state 20


State 15

   12 Type: BOOL •

    $default  reduce using rule 12 (Type)


State 16

   14 Type: DOUBLE •

    $default  reduce using rule 14 (Type)


State 17

   13 Type: INT •

    $default  reduce using rule 13 (Type)


State 18

   16 MethodHeader: VOID • IDENTIFIER LPAR OptFormalParams RPAR

    IDENTIFIER  shift, and go to state 21


State 19

    7 FieldDecl: PUBLIC STATIC Type • IDENTIFIER IdList SEMICOLON
   15 MethodHeader: Type • IDENTIFIER LPAR OptFormalParams RPAR

    IDENTIFIER  shift, and go to state 22


State 20

    6 MethodDecl: PUBLIC STATIC MethodHeader • MethodBody

    LBRACE  shift, and go to state 23

    MethodBody  go to state 24


State 21

   16 MethodHeader: VOID IDENTIFIER • LPAR OptFormalParams RPAR

    LPAR  shift, and go to state 25


State 22

    7 FieldDecl: PUBLIC STATIC Type IDENTIFIER • IdList SEMICOLON
   15 MethodHeader: Type IDENTIFIER • LPAR OptFormalParams RPAR

    LPAR  shift, and go to state 26

    $default  reduce using rule 10 (IdList)

    IdList  go to state 27


State 23

   23 MethodBody: LBRACE • StatementAndVarDeclList RBRACE

    $default  reduce using rule 24 (StatementAndVarDeclList)

    StatementAndVarDeclList  go to state 28


State 24

    6 MethodDecl: PUBLIC STATIC MethodHeader MethodBody •

    $default  reduce using rule 6 (MethodDecl)


State 25

   16 MethodHeader: VOID IDENTIFIER LPAR • OptFormalParams RPAR

    BOOL    shift, and go to state 15
    DOUBLE  shift, and go to state 16
    INT     shift, and go to state 17
    STRING  shift, and go to state 29

    $default  reduce using rule 17 (OptFormalParams)

    Type             go to state 30
    OptFormalParams  go to state 31
    FormalParams     go to state 32


State 26

   15 MethodHeader: Type IDENTIFIER LPAR • OptFormalParams RPAR

    BOOL    shift, and go to state 15
    DOUBLE  shift, and go to state 16
    INT     shift, and go to state 17
    STRING  shift, and go to state 29

    $default  reduce using rule 17 (OptFormalParams)

    Type             go to state 30
    OptFormalParams  go to state 33
    FormalParams     go to state 32


State 27

    7 FieldDecl: PUBLIC STATIC Type IDENTIFIER IdList • SEMICOLON
   11 IdList: IdList • COMMA IDENTIFIER

    COMMA      shift, and go to state 34
    SEMICOLON  shift, and go to state 35


State 28

   23 MethodBody: LBRACE StatementAndVarDeclList • RBRACE
   25 StatementAndVarDeclList: StatementAndVarDeclList • Statement
   26                        | StatementAndVarDeclList • VarDecl

    error       shift, and go to state 36
    BOOL        shift, and go to state 15
    DOUBLE      shift, and go to state 16
    IF          shift, and go to state 37
    INT         shift, and go to state 17
    PRINT       shift, and go to state 38
    PARSEINT    shift, and go to state 39
    RETURN      shift, and go to state 40
    WHILE       shift, and go to state 41
    LBRACE      shift, and go to state 42
    RBRACE      shift, and go to state 43
    SEMICOLON   shift, and go to state 44
    IDENTIFIER  shift, and go to state 45

    VarDecl           go to state 46
    Type              go to state 47
    Statement         go to state 48
    MethodInvocation  go to state 49
    Assignment        go to state 50
    ParseArgs         go to state 51


State 29

   20 FormalParams: STRING • LSQ RSQ IDENTIFIER

    LSQ  shift, and go to state 52


State 30

   19 FormalParams: Type • IDENTIFIER FormalParamsRest

    IDENTIFIER  shift, and go to state 53


State 31

   16 MethodHeader: VOID IDENTIFIER LPAR OptFormalParams • RPAR

    RPAR  shift, and go to state 54


State 32

   18 OptFormalParams: FormalParams •

    $default  reduce using rule 18 (OptFormalParams)


State 33

   15 MethodHeader: Type IDENTIFIER LPAR OptFormalParams • RPAR

    RPAR  shift, and go to state 55


State 34

   11 IdList: IdList COMMA • IDENTIFIER

    IDENTIFIER  shift, and go to state 56


State 35

    7 FieldDecl: PUBLIC STATIC Type IDENTIFIER IdList SEMICOLON •

    $default  reduce using rule 7 (FieldDecl)


State 36

   38 Statement: error • SEMICOLON

    SEMICOLON  shift, and go to state 57


State 37

   30 Statement: IF • LPAR Expr RPAR Statement
   31          | IF • LPAR Expr RPAR Statement ELSE Statement

    LPAR  shift, and go to state 58


State 38

   37 Statement: PRINT • LPAR ExprOrStrlit RPAR SEMICOLON

    LPAR  shift, and go to state 59


State 39

   53 ParseArgs: PARSEINT • LPAR IDENTIFIER LSQ Expr RSQ RPAR
   54          | PARSEINT • LPAR error RPAR

    LPAR  shift, and go to state 60


State 40

   33 Statement: RETURN • OptExpr SEMICOLON

    PARSEINT    shift, and go to state 39
    LPAR        shift, and go to state 61
    MINUS       shift, and go to state 62
    NOT         shift, and go to state 63
    PLUS        shift, and go to state 64
    IDENTIFIER  shift, and go to state 65
    NATURAL     shift, and go to state 66
    DECIMAL     shift, and go to state 67
    BOOLLIT     shift, and go to state 68

    $default  reduce using rule 40 (OptExpr)

    OptExpr           go to state 69
    MethodInvocation  go to state 70
    ParseArgs         go to state 71
    Expr              go to state 72


State 41

   32 Statement: WHILE • LPAR Expr RPAR Statement

    LPAR  shift, and go to state 73


State 42

   29 Statement: LBRACE • StatementList RBRACE

    $default  reduce using rule 27 (StatementList)

    StatementList  go to state 74


State 43

   23 MethodBody: LBRACE StatementAndVarDeclList RBRACE •

    $default  reduce using rule 23 (MethodBody)


State 44

   39 Statement: SEMICOLON •

    $default  reduce using rule 39 (Statement)


State 45

   44 MethodInvocation: IDENTIFIER • LPAR OptExprList RPAR
   45                 | IDENTIFIER • LPAR error RPAR
   50 Assignment: IDENTIFIER • ASSIGN AExpr

    ASSIGN  shift, and go to state 75
    LPAR    shift, and go to state 76


State 46

   26 StatementAndVarDeclList: StatementAndVarDeclList VarDecl •

    $default  reduce using rule 26 (StatementAndVarDeclList)


State 47

    9 VarDecl: Type • IDENTIFIER IdList SEMICOLON

    IDENTIFIER  shift, and go to state 77


State 48

   25 StatementAndVarDeclList: StatementAndVarDeclList Statement •

    $default  reduce using rule 25 (StatementAndVarDeclList)


State 49

   34 Statement: MethodInvocation • SEMICOLON

    SEMICOLON  shift, and go to state 78


State 50

   35 Statement: Assignment • SEMICOLON

    SEMICOLON  shift, and go to state 79


State 51

   36 Statement: ParseArgs • SEMICOLON

    SEMICOLON  shift, and go to state 80


State 52

   20 FormalParams: STRING LSQ • RSQ IDENTIFIER

    RSQ  shift, and go to state 81


State 53

   19 FormalParams: Type IDENTIFIER • FormalParamsRest

    $default  reduce using rule 21 (FormalParamsRest)

    FormalParamsRest  go to state 82


State 54

   16 MethodHeader: VOID IDENTIFIER LPAR OptFormalParams RPAR •

    $default  reduce using rule 16 (MethodHeader)


State 55

   15 MethodHeader: Type IDENTIFIER LPAR OptFormalParams RPAR •

    $default  reduce using rule 15 (MethodHeader)


State 56

   11 IdList: IdList COMMA IDENTIFIER •

    $default  reduce using rule 11 (IdList)


State 57

   38 Statement: error SEMICOLON •

    $default  reduce using rule 38 (Statement)


State 58

   30 Statement: IF LPAR • Expr RPAR Statement
   31          | IF LPAR • Expr RPAR Statement ELSE Statement

    PARSEINT    shift, and go to state 39
    LPAR        shift, and go to state 61
    MINUS       shift, and go to state 62
    NOT         shift, and go to state 63
    PLUS        shift, and go to state 64
    IDENTIFIER  shift, and go to state 65
    NATURAL     shift, and go to state 66
    DECIMAL     shift, and go to state 67
    BOOLLIT     shift, and go to state 68

    MethodInvocation  go to state 70
    ParseArgs         go to state 71
    Expr              go to state 83


State 59

   37 Statement: PRINT LPAR • ExprOrStrlit RPAR SEMICOLON

    PARSEINT    shift, and go to state 39
    LPAR        shift, and go to state 61
    MINUS       shift, and go to state 62
    NOT         shift, and go to state 63
    PLUS        shift, and go to state 64
    IDENTIFIER  shift, and go to state 65
    NATURAL     shift, and go to state 66
    DECIMAL     shift, and go to state 67
    STRLIT      shift, and go to state 84
    BOOLLIT     shift, and go to state 68

    ExprOrStrlit      go to state 85
    MethodInvocation  go to state 70
    ParseArgs         go to state 71
    Expr              go to state 86


State 60

   53 ParseArgs: PARSEINT LPAR • IDENTIFIER LSQ Expr RSQ RPAR
   54          | PARSEINT LPAR • error RPAR

    error       shift, and go to state 87
    IDENTIFIER  shift, and go to state 88


State 61

   74 Expr: LPAR • AExpr RPAR
   75     | LPAR • error RPAR

    error       shift, and go to state 89
    PARSEINT    shift, and go to state 39
    LPAR        shift, and go to state 61
    MINUS       shift, and go to state 62
    NOT         shift, and go to state 63
    PLUS        shift, and go to state 64
    IDENTIFIER  shift, and go to state 90
    NATURAL     shift, and go to state 66
    DECIMAL     shift, and go to state 67
    BOOLLIT     shift, and go to state 68

    MethodInvocation  go to state 70
    AExpr             go to state 91
    ParseArgs         go to state 71
    Expr              go to state 92


State 62

   71 Expr: MINUS • Expr

    PARSEINT    shift, and go to state 39
    LPAR        shift, and go to state 61
    MINUS       shift, and go to state 62
    NOT         shift, and go to state 63
    PLUS        shift, and go to state 64
    IDENTIFIER  shift, and go to state 65
    NATURAL     shift, and go to state 66
    DECIMAL     shift, and go to state 67
    BOOLLIT     shift, and go to state 68

    MethodInvocation  go to state 70
    ParseArgs         go to state 71
    Expr              go to state 93


State 63

   73 Expr: NOT • Expr

    PARSEINT    shift, and go to state 39
    LPAR        shift, and go to state 61
    MINUS       shift, and go to state 62
    NOT         shift, and go to state 63
    PLUS        shift, and go to state 64
    IDENTIFIER  shift, and go to state 65
    NATURAL     shift, and go to state 66
    DECIMAL     shift, and go to state 67
    BOOLLIT     shift, and go to state 68

    MethodInvocation  go to state 70
    ParseArgs         go to state 71
    Expr              go to state 94


State 64

   72 Expr: PLUS • Expr

    PARSEINT    shift, and go to state 39
    LPAR        shift, and go to state 61
    MINUS       shift, and go to state 62
    NOT         shift, and go to state 63
    PLUS        shift, and go to state 64
    IDENTIFIER  shift, and go to state 65
    NATURAL     shift, and go to state 66
    DECIMAL     shift, and go to state 67
    BOOLLIT     shift, and go to state 68

    MethodInvocation  go to state 70
    ParseArgs         go to state 71
    Expr              go to state 95


State 65

   44 MethodInvocation: IDENTIFIER • LPAR OptExprList RPAR
   45                 | IDENTIFIER • LPAR error RPAR
   78 Expr: IDENTIFIER • OptDotLength

    DOTLENGTH  shift, and go to state 96
    LPAR       shift, and go to state 76

    $default  reduce using rule 82 (OptDotLength)

    OptDotLength  go to state 97


State 66

   79 Expr: NATURAL •

    $default  reduce using rule 79 (Expr)


State 67

   80 Expr: DECIMAL •

    $default  reduce using rule 80 (Expr)


State 68

   81 Expr: BOOLLIT •

    $default  reduce using rule 81 (Expr)


State 69

   33 Statement: RETURN OptExpr • SEMICOLON

    SEMICOLON  shift, and go to state 98


State 70

   76 Expr: MethodInvocation •

    $default  reduce using rule 76 (Expr)


State 71

   77 Expr: ParseArgs •

    $default  reduce using rule 77 (Expr)


State 72

   41 OptExpr: Expr •
   55 Expr: Expr • PLUS Expr
   56     | Expr • MINUS Expr
   57     | Expr • STAR Expr
   58     | Expr • DIV Expr
   59     | Expr • MOD Expr
   60     | Expr • AND Expr
   61     | Expr • OR Expr
   62     | Expr • XOR Expr
   63     | Expr • LSHIFT Expr
   64     | Expr • RSHIFT Expr
   65     | Expr • EQ Expr
   66     | Expr • GE Expr
   67     | Expr • GT Expr
   68     | Expr • LE Expr
   69     | Expr • LT Expr
   70     | Expr • NE Expr

    AND     shift, and go to state 99
    STAR    shift, and go to state 100
    DIV     shift, and go to state 101
    EQ      shift, and go to state 102
    GE      shift, and go to state 103
    GT      shift, and go to state 104
    LE      shift, and go to state 105
    LT      shift, and go to state 106
    MINUS   shift, and go to state 107
    MOD     shift, and go to state 108
    NE      shift, and go to state 109
    OR      shift, and go to state 110
    PLUS    shift, and go to state 111
    LSHIFT  shift, and go to state 112
    RSHIFT  shift, and go to state 113
    XOR     shift, and go to state 114

    $default  reduce using rule 41 (OptExpr)


State 73

   32 Statement: WHILE LPAR • Expr RPAR Statement

    PARSEINT    shift, and go to state 39
    LPAR        shift, and go to state 61
    MINUS       shift, and go to state 62
    NOT         shift, and go to state 63
    PLUS        shift, and go to state 64
    IDENTIFIER  shift, and go to state 65
    NATURAL     shift, and go to state 66
    DECIMAL     shift, and go to state 67
    BOOLLIT     shift, and go to state 68

    MethodInvocation  go to state 70
    ParseArgs         go to state 71
    Expr              go to state 115


State 74

   28 StatementList: StatementList • Statement
   29 Statement: LBRACE StatementList • RBRACE

    error       shift, and go to state 36
    IF          shift, and go to state 37
    PRINT       shift, and go to state 38
    PARSEINT    shift, and go to state 39
    RETURN      shift, and go to state 40
    WHILE       shift, and go to state 41
    LBRACE      shift, and go to state 42
    RBRACE      shift, and go to state 116
    SEMICOLON   shift, and go to state 44
    IDENTIFIER  shift, and go to state 45

    Statement         go to state 117
    MethodInvocation  go to state 49
    Assignment        go to state 50
    ParseArgs         go to state 51


State 75

   50 Assignment: IDENTIFIER ASSIGN • AExpr

    PARSEINT    shift, and go to state 39
    LPAR        shift, and go to state 61
    MINUS       shift, and go to state 62
    NOT         shift, and go to state 63
    PLUS        shift, and go to state 64
    IDENTIFIER  shift, and go to state 90
    NATURAL     shift, and go to state 66
    DECIMAL     shift, and go to state 67
    BOOLLIT     shift, and go to state 68

    MethodInvocation  go to state 70
    AExpr             go to state 118
    ParseArgs         go to state 71
    Expr              go to state 92


State 76

   44 MethodInvocation: IDENTIFIER LPAR • OptExprList RPAR
   45                 | IDENTIFIER LPAR • error RPAR

    error       shift, and go to state 119
    PARSEINT    shift, and go to state 39
    LPAR        shift, and go to state 61
    MINUS       shift, and go to state 62
    NOT         shift, and go to state 63
    PLUS        shift, and go to state 64
    IDENTIFIER  shift, and go to state 90
    NATURAL     shift, and go to state 66
    DECIMAL     shift, and go to state 67
    BOOLLIT     shift, and go to state 68

    RPAR  reduce using rule 46 (OptExprList)

    MethodInvocation  go to state 70
    OptExprList       go to state 120
    ExprList          go to state 121
    AExpr             go to state 122
    ParseArgs         go to state 71
    Expr              go to state 92


State 77

    9 VarDecl: Type IDENTIFIER • IdList SEMICOLON

    $default  reduce using rule 10 (IdList)

    IdList  go to state 123


State 78

   34 Statement: MethodInvocation SEMICOLON •

    $default  reduce using rule 34 (Statement)


State 79

   35 Statement: Assignment SEMICOLON •

    $default  reduce using rule 35 (Statement)


State 80

   36 Statement: ParseArgs SEMICOLON •

    $default  reduce using rule 36 (Statement)


State 81

   20 FormalParams: STRING LSQ RSQ • IDENTIFIER

    IDENTIFIER  shift, and go to state 124


State 82

   19 FormalParams: Type IDENTIFIER FormalParamsRest •
   22 FormalParamsRest: FormalParamsRest • COMMA Type IDENTIFIER

    COMMA  shift, and go to state 125

    $default  reduce using rule 19 (FormalParams)


State 83

   30 Statement: IF LPAR Expr • RPAR Statement
   31          | IF LPAR Expr • RPAR Statement ELSE Statement
   55 Expr: Expr • PLUS Expr
   56     | Expr • MINUS Expr
   57     | Expr • STAR Expr
   58     | Expr • DIV Expr
   59     | Expr • MOD Expr
   60     | Expr • AND Expr
   61     | Expr • OR Expr
   62     | Expr • XOR Expr
   63     | Expr • LSHIFT Expr
   64     | Expr • RSHIFT Expr
   65     | Expr • EQ Expr
   66     | Expr • GE Expr
   67     | Expr • GT Expr
   68     | Expr • LE Expr
   69     | Expr • LT Expr
   70     | Expr • NE Expr

    AND     shift, and go to state 99
    STAR    shift, and go to state 100
    DIV     shift, and go to state 101
    EQ      shift, and go to state 102
    GE      shift, and go to state 103
    GT      shift, and go to state 104
    LE      shift, and go to state 105
    LT      shift, and go to state 106
    MINUS   shift, and go to state 107
    MOD     shift, and go to state 108
    NE      shift, and go to state 109
    OR      shift, and go to state 110
    PLUS    shift, and go to state 111
    RPAR    shift, and go to state 126
    LSHIFT  shift, and go to state 112
    RSHIFT  shift, and go to state 113
    XOR     shift, and go to state 114


State 84

   43 ExprOrStrlit: STRLIT •

    $default  reduce using rule 43 (ExprOrStrlit)


State 85

   37 Statement: PRINT LPAR ExprOrStrlit • RPAR SEMICOLON

    RPAR  shift, and go to state 127


State 86

   42 ExprOrStrlit: Expr •
   55 Expr: Expr • PLUS Expr
   56     | Expr • MINUS Expr
   57     | Expr • STAR Expr
   58     | Expr • DIV Expr
   59     | Expr • MOD Expr
   60     | Expr • AND Expr
   61     | Expr • OR Expr
   62     | Expr • XOR Expr
   63     | Expr • LSHIFT Expr
   64     | Expr • RSHIFT Expr
   65     | Expr • EQ Expr
   66     | Expr • GE Expr
   67     | Expr • GT Expr
   68     | Expr • LE Expr
   69     | Expr • LT Expr
   70     | Expr • NE Expr

    AND     shift, and go to state 99
    STAR    shift, and go to state 100
    DIV     shift, and go to state 101
    EQ      shift, and go to state 102
    GE      shift, and go to state 103
    GT      shift, and go to state 104
    LE      shift, and go to state 105
    LT      shift, and go to state 106
    MINUS   shift, and go to state 107
    MOD     shift, and go to state 108
    NE      shift, and go to state 109
    OR      shift, and go to state 110
    PLUS    shift, and go to state 111
    LSHIFT  shift, and go to state 112
    RSHIFT  shift, and go to state 113
    XOR     shift, and go to state 114

    $default  reduce using rule 42 (ExprOrStrlit)


State 87

   54 ParseArgs: PARSEINT LPAR error • RPAR

    RPAR  shift, and go to state 128


State 88

   53 ParseArgs: PARSEINT LPAR IDENTIFIER • LSQ Expr RSQ RPAR

    LSQ  shift, and go to state 129


State 89

   75 Expr: LPAR error • RPAR

    RPAR  shift, and go to state 130


State 90

   44 MethodInvocation: IDENTIFIER • LPAR OptExprList RPAR
   45                 | IDENTIFIER • LPAR error RPAR
   51 AExpr: IDENTIFIER • ASSIGN AExpr
   78 Expr: IDENTIFIER • OptDotLength

    DOTLENGTH  shift, and go to state 96
    ASSIGN     shift, and go to state 131
    LPAR       shift, and go to state 76

    $default  reduce using rule 82 (OptDotLength)

    OptDotLength  go to state 97


State 91

   74 Expr: LPAR AExpr • RPAR

    RPAR  shift, and go to state 132


State 92

   52 AExpr: Expr •
   55 Expr: Expr • PLUS Expr
   56     | Expr • MINUS Expr
   57     | Expr • STAR Expr
   58     | Expr • DIV Expr
   59     | Expr • MOD Expr
   60     | Expr • AND Expr
   61     | Expr • OR Expr
   62     | Expr • XOR Expr
   63     | Expr • LSHIFT Expr
   64     | Expr • RSHIFT Expr
   65     | Expr • EQ Expr
   66     | Expr • GE Expr
   67     | Expr • GT Expr
   68     | Expr • LE Expr
   69     | Expr • LT Expr
   70     | Expr • NE Expr

    AND     shift, and go to state 99
    STAR    shift, and go to state 100
    DIV     shift, and go to state 101
    EQ      shift, and go to state 102
    GE      shift, and go to state 103
    GT      shift, and go to state 104
    LE      shift, and go to state 105
    LT      shift, and go to state 106
    MINUS   shift, and go to state 107
    MOD     shift, and go to state 108
    NE      shift, and go to state 109
    OR      shift, and go to state 110
    PLUS    shift, and go to state 111
    LSHIFT  shift, and go to state 112
    RSHIFT  shift, and go to state 113
    XOR     shift, and go to state 114

    $default  reduce using rule 52 (AExpr)


State 93

   55 Expr: Expr • PLUS Expr
   56     | Expr • MINUS Expr
   57     | Expr • STAR Expr
   58     | Expr • DIV Expr
   59     | Expr • MOD Expr
   60     | Expr • AND Expr
   61     | Expr • OR Expr
   62     | Expr • XOR Expr
   63     | Expr • LSHIFT Expr
   64     | Expr • RSHIFT Expr
   65     | Expr • EQ Expr
   66     | Expr • GE Expr
   67     | Expr • GT Expr
   68     | Expr • LE Expr
   69     | Expr • LT Expr
   70     | Expr • NE Expr
   71     | MINUS Expr •

    $default  reduce using rule 71 (Expr)


State 94

   55 Expr: Expr • PLUS Expr
   56     | Expr • MINUS Expr
   57     | Expr • STAR Expr
   58     | Expr • DIV Expr
   59     | Expr • MOD Expr
   60     | Expr • AND Expr
   61     | Expr • OR Expr
   62     | Expr • XOR Expr
   63     | Expr • LSHIFT Expr
   64     | Expr • RSHIFT Expr
   65     | Expr • EQ Expr
   66     | Expr • GE Expr
   67     | Expr • GT Expr
   68     | Expr • LE Expr
   69     | Expr • LT Expr
   70     | Expr • NE Expr
   73     | NOT Expr •

    $default  reduce using rule 73 (Expr)


State 95

   55 Expr: Expr • PLUS Expr
   56     | Expr • MINUS Expr
   57     | Expr • STAR Expr
   58     | Expr • DIV Expr
   59     | Expr • MOD Expr
   60     | Expr • AND Expr
   61     | Expr • OR Expr
   62     | Expr • XOR Expr
   63     | Expr • LSHIFT Expr
   64     | Expr • RSHIFT Expr
   65     | Expr • EQ Expr
   66     | Expr • GE Expr
   67     | Expr • GT Expr
   68     | Expr • LE Expr
   69     | Expr • LT Expr
   70     | Expr • NE Expr
   72     | PLUS Expr •

    $default  reduce using rule 72 (Expr)


State 96

   83 OptDotLength: DOTLENGTH •

    $default  reduce using rule 83 (OptDotLength)


State 97

   78 Expr: IDENTIFIER OptDotLength •

    $default  reduce using rule 78 (Expr)


State 98

   33 Statement: RETURN OptExpr SEMICOLON •

    $default  reduce using rule 33 (Statement)


State 99

   60 Expr: Expr AND • Expr

    PARSEINT    shift, and go to state 39
    LPAR        shift, and go to state 61
    MINUS       shift, and go to state 62
    NOT         shift, and go to state 63
    PLUS        shift, and go to state 64
    IDENTIFIER  shift, and go to state 65
    NATURAL     shift, and go to state 66
    DECIMAL     shift, and go to state 67
    BOOLLIT     shift, and go to state 68

    MethodInvocation  go to state 70
    ParseArgs         go to state 71
    Expr              go to state 133


State 100

   57 Expr: Expr STAR • Expr

    PARSEINT    shift, and go to state 39
    LPAR        shift, and go to state 61
    MINUS       shift, and go to state 62
    NOT         shift, and go to state 63
    PLUS        shift, and go to state 64
    IDENTIFIER  shift, and go to state 65
    NATURAL     shift, and go to state 66
    DECIMAL     shift, and go to state 67
    BOOLLIT     shift, and go to state 68
